--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <li><a href="estrategias.html" target="_self">Estratégias</a></li>
         <li><a href="jogadores.html" target="_self">Jogadores Profissionais</a></li>
         <li><a href="bate-papo.html" target="_self">Bate-Papo</a></li>
-        <li><a href="cadastro.html" target="_self">cadastro</a></li>  
+        <li><a href="cadastro.html" target="_self">Cadastro</a></li>  
         <link rel="stylesheet" type="text/css" href="css/style.css">
       </ul>
     </nav>
